--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -60,16 +60,13 @@
         <source> The field password is <x id="START_TAG_STRONG" ctype="x-strong" equiv-text="&lt;strong&gt;"/>requered<x id="CLOSE_TAG_STRONG" ctype="x-strong" equiv-text="&lt;/strong&gt;"/></source>
       </trans-unit>
       <trans-unit id="pass_requirements" datatype="html">
-        <source>The password must contain between 6 and 20 characters and include 1 lowercase, 1 capitalcase, 1 number and 1 special character</source>
+        <source>Password must contain between 6 and 20 characters and include 1 lowercase, 1 capitalcase, 1 number and 1 special character</source>
       </trans-unit>
       <trans-unit id="af3f7d5887abc4d1e4f11fcac61b7a4f12b7cfe9" datatype="html">
         <source>Rememberme</source>
       </trans-unit>
       <trans-unit id="dead4eb38a801bf6380c1586a0265284228162bf" datatype="html">
         <source>Go ahead!</source>
-      </trans-unit>
-      <trans-unit id="14fedea5a910bf44566298f9811b1542a6ab3989" datatype="html">
-        <source>I am new, I want to start!</source>
       </trans-unit>
       <trans-unit id="ea9777126c0d1176490d7967410a62aca96c75f7" datatype="html">
         <source>Did you forget the password?</source>
@@ -123,13 +120,10 @@
         <source> The field pasword is <x id="START_TAG_STRONG" ctype="x-strong" equiv-text="&lt;strong&gt;"/>required<x id="CLOSE_TAG_STRONG" ctype="x-strong" equiv-text="&lt;/strong&gt;"/></source>
       </trans-unit>
       <trans-unit id="pass_requirements-error" datatype="html">
-        <source> The field password <x id="START_TAG_STRONG" ctype="x-strong" equiv-text="&lt;strong&gt;"/>does not match the requirements<x id="CLOSE_TAG_STRONG" ctype="x-strong" equiv-text="&lt;/strong&gt;"/>. You can check this requirements in the detail´s dropdown. </source>
+        <source> The field password <x id="START_TAG_STRONG" ctype="x-strong" equiv-text="&lt;strong&gt;"/>does not match the requirements<x id="CLOSE_TAG_STRONG" ctype="x-strong" equiv-text="&lt;/strong&gt;"/>. </source>
       </trans-unit>
       <trans-unit id="18c96743c3835e5d3d8af54cac565ca6376798e9" datatype="html">
         <source>Introduce the new password</source>
-      </trans-unit>
-      <trans-unit id="080ef2fac50eb09fa8ab5ea6e33483a39bf6dedf" datatype="html">
-        <source> The field pasword is <x id="START_TAG_STRONG" ctype="x-strong" equiv-text="&lt;strong&gt;"/>required<x id="CLOSE_TAG_STRONG" ctype="x-strong" equiv-text="&lt;/strong&gt;"/>. If you do not wish the password change, please desactive this option </source>
       </trans-unit>
       <trans-unit id="c3f0b4b1ab9b6623222a03602042d3a4b5c0f4a5" datatype="html">
         <source>Other data</source>
@@ -137,17 +131,11 @@
       <trans-unit id="c980d848a375e5604d1eee3ccd556db082ed9e2f" datatype="html">
         <source>I want to know why these extra data is needed to make a list to pack a suitcase.</source>
       </trans-unit>
-      <trans-unit id="2e6be334a2152f179a557167f98ce4459ff9a2f9" datatype="html">
-        <source>Age</source>
-      </trans-unit>
       <trans-unit id="06b7084268bc31b02b5c00476f2f877253307717" datatype="html">
         <source>Introduce your age</source>
       </trans-unit>
-      <trans-unit id="optional" datatype="html">
-        <source>Optional</source>
-      </trans-unit>
-      <trans-unit id="003d4f5e4909ccf01b6a204c688fd6dab15c20bd" datatype="html">
-        <source>Gender</source>
+      <trans-unit id="9e03bfc24d17138553609ba241e614647e1cd2ff" datatype="html">
+        <source>Age (Optional)</source>
       </trans-unit>
       <trans-unit id="097b5dfee5665aa0f7daba8b696acecde6445474" datatype="html">
         <source>Male</source>
@@ -478,6 +466,15 @@
       </trans-unit>
       <trans-unit id="d6bbf648820068c3a29583083524d7c848aa5773" datatype="html">
         <source>📍 Spain.</source>
+      </trans-unit>
+      <trans-unit id="25d84f777c27d2f75c151b1ba693c1a3409fcb2a" datatype="html">
+        <source>Gender (Optional)</source>
+      </trans-unit>
+      <trans-unit id="783f63fff2215fba2767e31a03173f7e5935ea62" datatype="html">
+        <source> The field pasword is <x id="START_TAG_STRONG" ctype="x-strong" equiv-text="&lt;strong&gt;"/>required<x id="CLOSE_TAG_STRONG" ctype="x-strong" equiv-text="&lt;/strong&gt;"/>. </source>
+      </trans-unit>
+      <trans-unit id="e366b542b9627d8379cd034b6358fbec27b6ce57" datatype="html">
+        <source>I am new, Let&apos;s start!</source>
       </trans-unit>
     </body>
   </file>
