--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -62,8 +62,8 @@
       <trans-unit id="pass_requirements" datatype="html">
         <source>Password must contain between 6 and 20 characters and include 1 lowercase, 1 capitalcase, 1 number and 1 special character</source>
       </trans-unit>
-      <trans-unit id="af3f7d5887abc4d1e4f11fcac61b7a4f12b7cfe9" datatype="html">
-        <source>Rememberme</source>
+      <trans-unit id="3eb49d60bd859eb2d9d3a6d380cdf4e0b8252333" datatype="html">
+        <source>Remember me</source>
       </trans-unit>
       <trans-unit id="dead4eb38a801bf6380c1586a0265284228162bf" datatype="html">
         <source>Go ahead!</source>
@@ -362,11 +362,11 @@
       <trans-unit id="category_baby" datatype="html">
         <source>baby</source>
       </trans-unit>
-      <trans-unit id="856408099070f83cf0b14184ae8df46c8c47acae" datatype="html">
-        <source>Forget about missing things for your next trip at home</source>
+      <trans-unit id="3852e8fc8feeb63e34dfc36515e74c7c5863f8b0" datatype="html">
+        <source>Forget about missing things for your next trip</source>
       </trans-unit>
-      <trans-unit id="973ac42d2ca683d31e841564884c5e9a5c6cea8a" datatype="html">
-        <source>Packing has always been the most boring part of the trip. With <x id="START_ITALIC_TEXT" ctype="x-i" equiv-text="&lt;i&gt;"/>Mysuitcase<x id="CLOSE_ITALIC_TEXT" ctype="x-i" equiv-text="&lt;/i&gt;"/> we help you to optimize this process to not let you forget anything in your next trip. ¿Why loosing time with things that dont require it?</source>
+      <trans-unit id="47f2ee6d73ef1554e15d7c5ea84e31d2f91cb358" datatype="html">
+        <source>Packing has always been the most boring part of the trip. With <x id="START_ITALIC_TEXT" ctype="x-i" equiv-text="&lt;i&gt;"/>Mysuitcase<x id="CLOSE_ITALIC_TEXT" ctype="x-i" equiv-text="&lt;/i&gt;"/> we help you to optimize this process to not let you forget anything in your next trip. Why loosing time with things that dont require it?</source>
       </trans-unit>
       <trans-unit id="6c2e48a2bed359dfc34b2dae4735a392054e8a23" datatype="html">
         <source>Login/Sign Up</source>
@@ -380,14 +380,14 @@
       <trans-unit id="56259db7a64e1a056e364dd172c4bd2f3bd24ec6" datatype="html">
         <source>A countryside gateway are, generally, a kind of trip for those who pursue a direct contact with the nature.</source>
       </trans-unit>
-      <trans-unit id="4e360c6a8e905743a34f17bf271cf2d4fb2f5d76" datatype="html">
-        <source>¿Sun, beach?</source>
+      <trans-unit id="3bb0327f1088e4ac339996399ca151cd626e2f91" datatype="html">
+        <source>Sun, beach?</source>
       </trans-unit>
       <trans-unit id="457462efa9dd3323a65ff5b7fe2c5d3b429b9032" datatype="html">
         <source>Some days to rest and to sunbath in a dreamed beach is never a bad idea. </source>
       </trans-unit>
-      <trans-unit id="70f01136cd9bfd6983b8461a7d37cdd111928826" datatype="html">
-        <source>¿Turism, culture?</source>
+      <trans-unit id="e99d7ae1515c88ff4e9a7c4f42953e494d833e73" datatype="html">
+        <source>Turism, culture?</source>
       </trans-unit>
       <trans-unit id="51a93b3ed727457cdd06dc2ecdd8abdc9b300651" datatype="html">
         <source>If you love finding out new the historic city centers all around the world, this is your trip</source>
