redirect when changing language

--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-  <file source-language="en-US" datatype="plaintext" original="ng2.template" target-language="fr">
+  <file source-language="en-US" datatype="plaintext" original="ng2.template" target-language="fr-FR">
     <body>
       <trans-unit id="5780453321491708967" datatype="html">
         <source>You have reached the maximum number of suitcases</source>
