--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -476,6 +476,24 @@
       <trans-unit id="e366b542b9627d8379cd034b6358fbec27b6ce57" datatype="html">
         <source>I am new, Let&apos;s start!</source>
       </trans-unit>
+      <trans-unit id="52d5bfe05886f782c70d72b1908cd9491b6f66da" datatype="html">
+        <source>Both passwords dont match</source>
+      </trans-unit>
+      <trans-unit id="7496106783763114485" datatype="html">
+        <source>If the user exists in our data base, an email has successfully been sent to update your password, check your email even in the junk folder</source>
+      </trans-unit>
+      <trans-unit id="8224637288884628884" datatype="html">
+        <source>The password has succesfully been updated, you can login now</source>
+      </trans-unit>
+      <trans-unit id="confirmPassword" datatype="html">
+        <source>Confirm password</source>
+      </trans-unit>
+      <trans-unit id="f2f39aedb60df25817490ef4da4162a5a7cf8246" datatype="html">
+        <source>The field password is <x id="START_TAG_STRONG" ctype="x-strong" equiv-text="&lt;strong&gt;"/>required<x id="CLOSE_TAG_STRONG" ctype="x-strong" equiv-text="&lt;/strong&gt;"/></source>
+      </trans-unit>
+      <trans-unit id="916fa1b6137bcfdeb4cb2d1da23de5f25a628993" datatype="html">
+        <source>Invalid password, check the details</source>
+      </trans-unit>
     </body>
   </file>
 </xliff>
