--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -566,12 +566,12 @@
         <target>Ya estoy registrado, quiero volver.</target>
       </trans-unit>
       <trans-unit id="English" datatype="html">
-        <source>English</source>
-        <target state="new">English</target>
+        <source>English <x id="TAG_IMG" ctype="image" equiv-text="&lt;img class=&quot;lang-img lang-img--small&quot; alt=&quot;UK flag&quot; src=&quot;assets/img/lang/uk-flag-icon.png&quot;&gt;"/></source>
+        <target state="new">English <x id="TAG_IMG" ctype="image" equiv-text="&lt;img class=&quot;lang-img lang-img--small&quot; alt=&quot;UK flag&quot; src=&quot;assets/img/lang/uk-flag-icon.png&quot;&gt;"/></target>
       </trans-unit>
       <trans-unit id="Spanish" datatype="html">
-        <source>Spanish</source>
-        <target state="new">Spanish</target>
+        <source>Spanish <x id="TAG_IMG" ctype="image" equiv-text="&lt;img class=&quot;lang-img lang-img--small&quot; alt=&quot;Spain flag&quot; src=&quot;assets/img/lang/spain-flag-icon.png&quot;&gt;"/></source>
+        <target state="new">Spanish <x id="TAG_IMG" ctype="image" equiv-text="&lt;img class=&quot;lang-img lang-img--small&quot; alt=&quot;Spain flag&quot; src=&quot;assets/img/lang/spain-flag-icon.png&quot;&gt;"/></target>
       </trans-unit>
       <trans-unit id="fe46ccaae902ce974e2441abe752399288298619" datatype="html">
         <source>Language</source>
@@ -652,6 +652,14 @@
       <trans-unit id="916fa1b6137bcfdeb4cb2d1da23de5f25a628993" datatype="html">
         <source>Invalid password, check the details</source>
         <target state="new">Invalid password, check the details</target>
+      </trans-unit>
+      <trans-unit id="English-tooltip" datatype="html">
+        <source>English</source>
+        <target state="new">English</target>
+      </trans-unit>
+      <trans-unit id="Spanish-tooltip" datatype="html">
+        <source>Spanish</source>
+        <target state="new">Spanish</target>
       </trans-unit>
     </body>
   </file>
