add missing translations

--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -661,6 +661,14 @@
         <source>Spanish</source>
         <target state="new">Spanish</target>
       </trans-unit>
+      <trans-unit id="7371a1fd2da4a67a285dca20fa05b57e0e494896" datatype="html">
+        <source>All rights reserved</source>
+        <target state="new">All rights reserved</target>
+      </trans-unit>
+      <trans-unit id="01ab0c6ecc20d99d424f9a618c51e1afcb570568" datatype="html">
+        <source>Website made by </source>
+        <target state="new">Website made by </target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
