--- a/src/locale/messages.es.xlf
+++ b/src/locale/messages.es.xlf
@@ -663,6 +663,14 @@
         <source>Invalid password, check the details</source>
         <target>Contraseña inválida, revisa los detalles</target>
       </trans-unit>
+      <trans-unit id="7371a1fd2da4a67a285dca20fa05b57e0e494896" datatype="html">
+        <source>All rights reserved</source>
+        <target>Todos los derechos reservados</target>
+      </trans-unit>
+      <trans-unit id="01ab0c6ecc20d99d424f9a618c51e1afcb570568" datatype="html">
+        <source>Website made by </source>
+        <target>Website creada por </target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
